<resources>
    <string name="app_name">BattleshipGame</string>
    <string name="tv_sign_in">Sign in</string>
    <string name="start_game">Start game</string>
    <string name="new_game">New game</string>
    <string name="join_game">Join game</string>
    <string name="game_id">Game ID</string>
    <string name="sign_out">Sign out</string>
    <string name="horizontal">Horizontal</string>
    <string name="vertical">Vertical</string>
    <string name="place_one_4_rank_ship">Place one 4 rank ship</string>
    <string name="ships_are_set">All ships are set</string>
    <string name="start">Start</string>
    <string name="players_move">%s player\'s move</string>
    <string name="stats_wins">%s wins</string>
    <string name="stats_total">%s games played</string>
    <string name="back_to_menu">Back to menu</string>
    <string name="your_move">Your move now</string>
    <string name="opp_move">Opponent\'s move</string>
    <string name="you_won">You won!</string>
    <string name="profile_info">Profile info</string>
    <string name="upload_image">Upload image</string>
    <string name="defeat">Defeat</string>
    <string name="gravatar_image">Gravatar image</string>
    <string name="place_ships">Place %d ships of rank %d</string>
    <string name="sign_in_failed">Sign in failed</string>
    <string name="wrong_id_type">Wrong id type</string>
    <string name="no_such_game">No such game</string>
</resources>
